Create index.html for Athens Car Rental website
Added a complete HTML structure for the Athens Car Rental website, including navigation, hero section, features, call-to-action, and footer.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Athens Car Rental - Premium Vehicle Rentals in Athens</title>
+  <meta name="description" content="Rent economy, luxury, and premium vehicles in Athens. Daily rentals with transparent pricing and exceptional service.">
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Inter:wght@400;500;600;700&family=Crimson+Pro:ital,wght@1,400&display=swap" rel="stylesheet">
+  
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navigation -->
+  <nav>
+    <div class="nav-container">
+      <a href="index.html" class="logo">Athens.Car.Rental</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="fleet-by-date.html">Fleet by Date</a></li>
+        <li><a href="all-fleet.html">All Fleet</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-container">
+      <div class="hero-content">
+        <p class="hero-subtitle">Premium rentals in Athens</p>
+        <h1>Drive Athens Your Way</h1>
+        <p>From economy to luxury, find the perfect vehicle for your journey through Greece. Transparent pricing, exceptional service, seamless booking.</p>
+        <div class="hero-cta">
+          <a href="fleet-by-date.html" class="btn btn-primary">
+            Check Availability
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M5 12h14M12 5l7 7-7 7"/>
+            </svg>
+          </a>
+          <a href="all-fleet.html" class="btn btn-secondary">View All Vehicles</a>
+        </div>
+      </div>
+      <div class="hero-visual">
+        <img src="https://images.unsplash.com/photo-1449965408869-eaa3f722e40d?w=1200&auto=format&fit=crop" alt="Car rental in Athens" class="hero-image">
+      </div>
+    </div>
+  </section>
+
+  <!-- Features Section -->
+  <section class="section">
+    <div class="section-header">
+      <p class="section-subtitle">Why choose us</p>
+      <h2 class="section-title">Simple, Reliable, Premium</h2>
+      <p class="section-description">We offer a curated fleet of well-maintained vehicles, transparent pricing, and a hassle-free rental experience in the heart of Athens.</p>
+    </div>
+
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2.5rem; margin-top: 4rem;">
+      <div style="text-align: center; padding: 2rem; background: var(--color-surface); border-radius: 12px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+        <div style="width: 64px; height: 64px; margin: 0 auto 1.5rem; background: linear-gradient(135deg, rgba(43, 95, 117, 0.1) 0%, rgba(74, 139, 168, 0.15) 100%); border-radius: 16px; display: flex; align-items: center; justify-content: center;">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+            <path d="M2 17l10 5 10-5"/>
+            <path d="M2 12l10 5 10-5"/>
+          </svg>
+        </div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary);">Diverse Fleet</h4>
+        <p style="color: var(--color-text-light); font-size: 0.9375rem;">From compact city cars to luxury sedans and SUVs</p>
+      </div>
+
+      <div style="text-align: center; padding: 2rem; background: var(--color-surface); border-radius: 12px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+        <div style="width: 64px; height: 64px; margin: 0 auto 1.5rem; background: linear-gradient(135deg, rgba(43, 95, 117, 0.1) 0%, rgba(74, 139, 168, 0.15) 100%); border-radius: 16px; display: flex; align-items: center; justify-content: center;">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+            <polyline points="7 10 12 15 17 10"/>
+            <line x1="12" y1="15" x2="12" y2="3"/>
+          </svg>
+        </div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary);">Transparent Pricing</h4>
+        <p style="color: var(--color-text-light); font-size: 0.9375rem;">No hidden fees. What you see is what you pay</p>
+      </div>
+
+      <div style="text-align: center; padding: 2rem; background: var(--color-surface); border-radius: 12px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+        <div style="width: 64px; height: 64px; margin: 0 auto 1.5rem; background: linear-gradient(135deg, rgba(43, 95, 117, 0.1) 0%, rgba(74, 139, 168, 0.15) 100%); border-radius: 16px; display: flex; align-items: center; justify-content: center;">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+            <circle cx="12" cy="7" r="4"/>
+          </svg>
+        </div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary);">24/7 Support</h4>
+        <p style="color: var(--color-text-light); font-size: 0.9375rem;">We're here to help, anytime you need us</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA Section -->
+  <section class="section" style="text-align: center; padding: 5rem 2rem; background: linear-gradient(135deg, rgba(43, 95, 117, 0.05) 0%, rgba(74, 139, 168, 0.08) 100%); border-radius: 24px; margin: 0 2rem;">
+    <h2 style="margin-bottom: 1rem; color: var(--color-primary);">Ready to Hit the Road?</h2>
+    <p style="font-size: 1.125rem; color: var(--color-text-light); max-width: 600px; margin: 0 auto 2.5rem;">Check our real-time availability and book your perfect vehicle in minutes.</p>
+    <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+      <a href="fleet-by-date.html" class="btn btn-primary">Check Availability</a>
+      <a href="contact.html" class="btn btn-secondary">Contact Us</a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h4>Athens Car Rental</h4>
+        <p>Premium vehicle rentals in the heart of Athens. Economy, compact, premium, and luxury options available.</p>
+      </div>
+      <div class="footer-section">
+        <h4>Quick Links</h4>
+        <a href="fleet-by-date.html">Fleet by Date</a>
+        <a href="all-fleet.html">All Fleet</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-section">
+        <h4>Contact</h4>
+        <p>📍 Athens, Greece</p>
+        <p>📧 info@athens.car.rental</p>
+        <p>📱 WhatsApp for bookings</p>
+      </div>
+      <div class="footer-section">
+        <h4>Follow Us</h4>
+        <a href="https://instagram.com/athens.car.rental" target="_blank">Instagram</a>
+        <p style="margin-top: 1rem;">1,131 followers</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2026 Athens Car Rental. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="script.js"></script>
+</body>
+</html>
