--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us - Athens Car Rental</title>
+  <meta name="description" content="Get in touch with Athens Car Rental. Book via WhatsApp, DM on Instagram, or send us a message.">
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Inter:wght@400;500;600;700&family=Crimson+Pro:ital,wght@1,400&display=swap" rel="stylesheet">
+  
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navigation -->
+  <nav>
+    <div class="nav-container">
+      <a href="index.html" class="logo">Athens.Car.Rental</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="fleet-by-date.html">Fleet by Date</a></li>
+        <li><a href="all-fleet.html">All Fleet</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
+  <!-- Page Content -->
+  <section class="section" style="padding-top: 8rem;">
+    <div class="section-header">
+      <p class="section-subtitle">Get in touch</p>
+      <h1 class="section-title">Contact Us</h1>
+      <p class="section-description">We're here to help you find the perfect vehicle for your journey. Reach out via WhatsApp, Instagram DM, or send us a message below.</p>
+    </div>
+
+    <div class="contact-container">
+      <!-- Contact Form -->
+      <div class="contact-form">
+        <h3 style="margin-bottom: 1.5rem; color: var(--color-primary);">Send us a Message</h3>
+        <form id="contact-form">
+          <div class="form-group">
+            <label for="name">Your Name *</label>
+            <input type="text" id="name" name="name" required placeholder="John Doe">
+          </div>
+
+          <div class="form-group">
+            <label for="email">Email Address *</label>
+            <input type="email" id="email" name="email" required placeholder="john@example.com">
+          </div>
+
+          <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="tel" id="phone" name="phone" placeholder="+30 123 456 7890">
+          </div>
+
+          <div class="form-group">
+            <label for="dates">Rental Dates (Optional)</label>
+            <input type="text" id="dates" name="dates" placeholder="e.g., March 15-20, 2026">
+          </div>
+
+          <div class="form-group">
+            <label for="vehicle">Preferred Vehicle Category</label>
+            <select id="vehicle" name="vehicle">
+              <option value="">Select a category</option>
+              <option value="Economy">Economy</option>
+              <option value="Compact">Compact</option>
+              <option value="Premium">Premium</option>
+              <option value="Luxury">Luxury</option>
+              <option value="SUV">SUV</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label for="message">Message *</label>
+            <textarea id="message" name="message" required placeholder="Tell us about your rental needs..."></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary" style="width: 100%;">
+            Send Message
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <line x1="22" y1="2" x2="11" y2="13"/>
+              <polygon points="22 2 15 22 11 13 2 9 22 2"/>
+            </svg>
+          </button>
+        </form>
+      </div>
+
+      <!-- Contact Information -->
+      <div class="contact-info">
+        <h3 style="margin-bottom: 1.5rem; color: var(--color-primary);">Contact Information</h3>
+        
+        <div class="info-grid">
+          <div class="info-item">
+            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/>
+                <circle cx="12" cy="10" r="3"/>
+              </svg>
+              <span class="info-label">Location</span>
+            </div>
+            <div class="info-value">Athens, Greece</div>
+            <div class="info-value" style="font-size: 0.875rem; margin-top: 0.25rem;">Multiple pick-up points available</div>
+          </div>
+
+          <div class="info-item">
+            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+              </svg>
+              <span class="info-label">WhatsApp</span>
+            </div>
+            <div class="info-value">Message us for bookings</div>
+            <div class="info-value" style="font-size: 0.875rem; margin-top: 0.25rem;">Quick response guaranteed</div>
+          </div>
+
+          <div class="info-item">
+            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                <polyline points="22,6 12,13 2,6"/>
+              </svg>
+              <span class="info-label">Email</span>
+            </div>
+            <div class="info-value">info@athens.car.rental</div>
+            <div class="info-value" style="font-size: 0.875rem; margin-top: 0.25rem;">We reply within 24 hours</div>
+          </div>
+
+          <div class="info-item">
+            <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 0.5rem;">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
+              </svg>
+              <span class="info-label">Instagram</span>
+            </div>
+            <div class="info-value">@athens.car.rental</div>
+            <div class="info-value" style="font-size: 0.875rem; margin-top: 0.25rem;">1,131 followers · DM us anytime</div>
+          </div>
+        </div>
+
+        <!-- Business Hours -->
+        <div style="margin-top: 2rem; padding: 1.5rem; background: var(--color-surface); border-radius: 12px; border: 1px solid var(--color-border);">
+          <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1rem;">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="var(--color-accent)" stroke-width="2">
+              <circle cx="12" cy="12" r="10"/>
+              <polyline points="12 6 12 12 16 14"/>
+            </svg>
+            <h4 style="color: var(--color-primary); font-size: 1.125rem;">Business Hours</h4>
+          </div>
+          <div style="color: var(--color-text-light); line-height: 1.8;">
+            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+              <span>Monday - Friday</span>
+              <span style="font-weight: 600; color: var(--color-text);">9:00 AM - 8:00 PM</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
+              <span>Saturday</span>
+              <span style="font-weight: 600; color: var(--color-text);">10:00 AM - 6:00 PM</span>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+              <span>Sunday</span>
+              <span style="font-weight: 600; color: var(--color-text);">By appointment</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ Section -->
+  <section class="section" style="background: var(--color-surface); padding: 4rem 2rem; border-radius: 24px; margin: 0 2rem 4rem;">
+    <h2 style="text-align: center; margin-bottom: 3rem; color: var(--color-primary);">Frequently Asked Questions</h2>
+    
+    <div style="max-width: 900px; margin: 0 auto; display: grid; gap: 2rem;">
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">How do I book a vehicle?</h4>
+        <p style="color: var(--color-text-light);">You can book via WhatsApp, Instagram DM, or by filling out the contact form above. We'll confirm your reservation and provide all the details you need.</p>
+      </div>
+
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">What documents do I need?</h4>
+        <p style="color: var(--color-text-light);">You'll need a valid driver's license (held for at least 1 year), passport or ID, and a credit card for the security deposit.</p>
+      </div>
+
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">Is insurance included?</h4>
+        <p style="color: var(--color-text-light);">Yes! All our vehicles come with comprehensive insurance coverage. You can drive with complete peace of mind.</p>
+      </div>
+
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">Can I deliver the car to the airport?</h4>
+        <p style="color: var(--color-text-light);">Absolutely! We offer airport pick-up and drop-off services. Just let us know your flight details when booking.</p>
+      </div>
+
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">What's your cancellation policy?</h4>
+        <p style="color: var(--color-text-light);">Free cancellation up to 48 hours before pick-up. For cancellations within 48 hours, a small fee may apply. Contact us for details.</p>
+      </div>
+
+      <div>
+        <h4 style="margin-bottom: 0.75rem; color: var(--color-primary); font-size: 1.125rem;">Do you offer long-term rentals?</h4>
+        <p style="color: var(--color-text-light);">Yes! We offer special rates for weekly and monthly rentals. Contact us to discuss your needs and get a custom quote.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-container">
+      <div class="footer-section">
+        <h4>Athens Car Rental</h4>
+        <p>Premium vehicle rentals in the heart of Athens. Economy, compact, premium, and luxury options available.</p>
+      </div>
+      <div class="footer-section">
+        <h4>Quick Links</h4>
+        <a href="fleet-by-date.html">Fleet by Date</a>
+        <a href="all-fleet.html">All Fleet</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-section">
+        <h4>Contact</h4>
+        <p>📍 Athens, Greece</p>
+        <p>📧 info@athens.car.rental</p>
+        <p>📱 WhatsApp for bookings</p>
+      </div>
+      <div class="footer-section">
+        <h4>Follow Us</h4>
+        <a href="https://instagram.com/athens.car.rental" target="_blank">Instagram</a>
+        <p style="margin-top: 1rem;">1,131 followers</p>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2026 Athens Car Rental. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="script.js"></script>
+</body>
+</html>
