--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
   
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
+
+  <style>
+    .built-by {
+      font-size: 13px;
+      color: rgba(255, 255, 255, 0.35);
+      margin-top: 6px;
+    }
+    .built-by a {
+      color: rgba(74, 139, 168, 0.85);
+      text-decoration: none;
+      font-weight: 600;
+      letter-spacing: 0.3px;
+      border-bottom: 1px solid rgba(74, 139, 168, 0.3);
+      padding-bottom: 1px;
+      transition: color 0.2s ease, border-color 0.2s ease;
+    }
+    .built-by a:hover {
+      color: rgba(74, 139, 168, 1);
+      border-color: rgba(74, 139, 168, 0.7);
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
@@ -134,6 +155,7 @@
     </div>
     <div class="footer-bottom">
       <p>&copy; 2026 Athens Car Rental. All rights reserved.</p>
+      <p class="built-by">Built by <a href="https://nikolassapa.vercel.app" target="_blank" rel="noopener noreferrer">Nikolas Sapalidis</a></p>
     </div>
   </footer>
 
